--- a/css/sass/modules/_number.scss
+++ b/css/sass/modules/_number.scss
@@ -26,7 +26,7 @@
       }
     }
     span {
-      color: #20b15a;
+      color: $green-color;
       font-weight: 600;
       font-size: 2em;
       text-align: center;
