--- a/css/sass/modules/_testimonial.scss
+++ b/css/sass/modules/_testimonial.scss
@@ -1,5 +1,5 @@
 .section-testimonial {
-  background: #ffffff;
+  background: $white-color;
   padding: 122px 0 300px 0;
   overflow: hidden;
   position: relative;
@@ -15,12 +15,12 @@
         font-weight: 500;
         text-transform: uppercase;
         margin-bottom: 15px;
-        color: #20b15a;
+        color: $green-color;
       }
       h2 {
         font-weight: 600;
         font-size: 1.875em;
-        color: #000000;
+        color: $black-color;
       }
       .slider-control {
         flex: 1;
@@ -41,12 +41,12 @@
         }
         .return {
           background: transparent;
-          border: 1px solid #000000;
+          border: 1px solid $black-color;
           margin-right: 21px;
         }
         .advance {
-          border: 1px solid #d7f5dc;
-          background-color: #d7f5dc;
+          border: 1px solid $green-color-light;
+          background-color: $green-color-light;
         }
       }
     }
@@ -83,7 +83,7 @@
         h3 {
           font-size: 1.25em;
           font-weight: 600;
-          color: #000000;
+          color: $black-color;
         }
         p {
           font-size: 1.125em;
