--- a/css/sass/modules/_footer.scss
+++ b/css/sass/modules/_footer.scss
@@ -1,7 +1,7 @@
 footer {
   background: #00ca72;
   a {
-    color: #000000;
+    color: $black-color;
   }
   .container {
     flex-direction: column;
@@ -29,7 +29,7 @@ footer {
             margin-right: 10px;
             width: 40.82px;
             height: 40.82px;
-            background: #20b15a;
+            background: $green-color;
             border-radius: 50%;
             padding: 11px 16px;
             display: flex;
