--- a/css/sass/modules/_subscribe.scss
+++ b/css/sass/modules/_subscribe.scss
@@ -1,5 +1,5 @@
 .section-subscribe {
-  background: #ffffff;
+  background: $white-color;
   padding: 91px 0 137px 0;
   .container {
     flex-direction: column;
@@ -8,13 +8,13 @@
       font-size: 1.25em;
       font-weight: 500;
       margin-bottom: 21px;
-      color: #20b15a;
+      color: $green-color;
     }
     h2 {
       font-size: 1.875em;
       font-weight: 600;
       margin-bottom: 5px;
-      color: #000000;
+      color: $black-color;
       text-transform: capitalize;
     }
     p {
@@ -29,7 +29,7 @@
     }
     input {
       border-radius: 14px;
-      border: 1px solid #000000;
+      border: 1px solid $black-color;
       padding: 20px 16px;
       color: #8b8b8b;
       width: 100%;
@@ -40,10 +40,10 @@
       top: 50%;
       transform: translateY(-50%);
       padding: 8.11px 24.32px;
-      color: #ffffff;
-      background: #f55f1d;
+      color: $white-color;
+      background: $orange-color;
       border-radius: 14px;
-      border: 1px solid #f55f1d;
+      border: 1px solid $orange-color;
       font-weight: 500;
       min-height: 52.7px;
       min-width: 130.65px;
