--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,3 +1,6 @@
+@import "./modules/variables.scss";
+@import "./modules/mixins.scss";
+@import "./modules/functions.scss";
 @import "./modules/general.scss";
 @import "./modules/hero.scss";
 @import "./modules/services.scss";
