--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,43 @@
+@font-face {
+  font-family: "Poppins";
+  src: url("/fonts/poppins/Poppins-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("/fonts/poppins/Poppins-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("/fonts/poppins/Poppins-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("/fonts/poppins/Poppins-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Avenir";
+  src: url("/fonts/avenir/AvenirLTStd-Medium.otf") format("opentype");
+  font-weight: 500;
+  font-style: normal;
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-  line-height: 1.4;
+  line-height: normal;
+}
+
+p {
+  font-family: "Avenir", sans-serif;
 }
 
 ul {
@@ -78,15 +112,18 @@ img {
   padding: 5px 0;
 }
 .section-hero header nav .logo {
-  padding: 10px;
-  margin: 0 10px;
+  padding: 10px 0;
   text-transform: capitalize;
-  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.25em;
+  font-weight: 700;
   color: #000000;
-  font-size: 1.5em;
 }
 .section-hero header nav .logo span {
   text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.25em;
+  font-weight: 700;
   color: #f55f1d;
 }
 .section-hero header nav .menu {
@@ -95,32 +132,103 @@ img {
   justify-content: space-between;
   align-items: center;
 }
-.section-hero header nav .menu li {
+.section-hero header nav .menu li a {
+  font-family: "Poppins", sans-serif;
   font-size: 1em;
   font-weight: 500;
+  color: #000000;
   text-transform: capitalize;
 }
-.section-hero header nav .menu li:nth-child(1) {
-  position: relative;
-  margin-right: 20px;
+.section-hero header nav .menu li a:visited {
+  color: #333333;
 }
-.section-hero header nav .menu li:nth-child(1)::after {
-  content: "";
-  background: url("/img/icon/arrow-right-down-bold.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 20px;
-  height: 20px;
-  position: absolute;
+.section-hero header nav .menu li a.register {
+  color: #ffffff;
 }
-.section-hero header nav .menu li:nth-child(1) a {
-  padding-right: 1px;
-}
-.section-hero header nav .menu li:last-child a {
+.section-hero header nav .menu li a.register:visited {
   color: #ffffff;
 }
 .section-hero header nav .menu li:nth-child(n+2):nth-child(-n+5) {
   margin-left: 30px;
+}
+.section-hero header nav .menu li .overlay {
+  height: 0;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow-y: hidden;
+  transition: 0.5s;
+}
+.section-hero header nav .menu li .overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+.section-hero header nav .menu li .overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #d7f5dc;
+  display: block;
+  transition: 0.3s;
+}
+.section-hero header nav .menu li .overlay a:hover, .section-hero header nav .menu li .overlay a:focus {
+  color: rgba(32, 177, 90, 0.5);
+}
+.section-hero header nav .menu li .overlay .overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+@media screen and (max-height: 450px) {
+  .section-hero header nav .menu li .overlay a {
+    font-size: 20px;
+  }
+  .section-hero header nav .menu li .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+}
+.section-hero header nav .menu li .bi-list {
+  display: none;
+  font-size: 2.5em;
+  color: #20b15a;
+  cursor: pointer;
+}
+.section-hero header nav .menu li .bi-list:hover {
+  color: rgba(32, 177, 90, 0.7);
+}
+.section-hero header nav .menu li.dropdown .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  border-radius: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.section-hero header nav .menu li.dropdown .dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+.section-hero header nav .menu li.dropdown .dropdown-content a:hover {
+  background-color: #ffdcca;
+  color: black;
+}
+.section-hero header nav .menu li.dropdown:hover .dropdown-content {
+  display: block;
 }
 .section-hero .banner-hero {
   display: flex;
@@ -221,7 +329,13 @@ img {
     margin-right: 50px !important;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
+  .section-hero header nav .menu li:not(:last-child) {
+    display: none;
+  }
+  .section-hero header nav .menu li .bi-list {
+    display: block;
+  }
   .container-tools {
     flex-direction: column;
     align-items: center;
@@ -248,7 +362,8 @@ img {
 }
 .section-services .container {
   flex-direction: column;
-  padding: 67px 0 67px 0;
+  padding-top: 67px;
+  padding-bottom: 67px;
 }
 .section-services .container header {
   position: relative;
