--- a/css/sass/modules/_services.scss
+++ b/css/sass/modules/_services.scss
@@ -33,6 +33,7 @@
           padding: 30px;
           border-radius: 20px;
           margin-bottom: 15px;
+          @include zoom();
         }
         h3 {
           font-weight: 600;
@@ -82,5 +83,15 @@
 @media screen and (max-width: 1024px) {
   .section-services .container {
     padding: 67px 15px 67px 15px;
+  }
+}
+
+@include device(sm) {
+  .section-services {
+    .container {
+      header {
+        margin-bottom: 70px !important;
+      }
+    }
   }
 }
