--- a/css/sass/modules/_general.scss
+++ b/css/sass/modules/_general.scss
@@ -55,6 +55,7 @@ a {
 
 button {
   cursor: pointer;
+  @include zoom();
 }
 
 img {
@@ -86,6 +87,8 @@ img {
   padding: 10px 15px;
   text-transform: capitalize;
   color: $white-color;
+  @include box-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  @include zoom();
   &:hover {
     background: rgb(32, 177, 90, 0.7);
   }
