improve: implementar animacoes nas sections e instalar webpack

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -9,3 +9,4 @@
 @import "./modules/testimonial.scss";
 @import "./modules/subscribe.scss";
 @import "./modules/footer.scss";
+@import "./modules/animacao.scss";
