--- a/css/sass/modules/_number.scss
+++ b/css/sass/modules/_number.scss
@@ -37,15 +37,16 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
   .section-numbers {
     padding: 80.5px 0;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .section-numbers {
     .numbers {
+      flex: 1 1 300px;
       &:last-child {
         border-right: none;
       }
