fix: corrigir altura e largura de icones da secao services

--- a/css/sass/modules/_general.scss
+++ b/css/sass/modules/_general.scss
@@ -61,7 +61,8 @@ button {
 
 img {
   display: block;
-  max-width: 100%;
+  max-width: 100% !important;
+  height: auto !important;
 }
 
 .container {
