--- a/css/style.css
+++ b/css/style.css
@@ -290,46 +290,43 @@ img {
 }
 .section-hero .tools {
   background: #f8fff9;
-  top: 0;
-}
-.section-hero .tools .container-tools {
-  max-width: 1222px;
   margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
   padding: 44px 0 47px 0;
+  max-width: 100%;
+  overflow: hidden;
+  display: flex;
 }
-.section-hero .tools .container-tools img {
+.section-hero .tools > * {
+  flex: 0 0 100%;
+}
+.section-hero .tools:hover .tools-group {
+  animation-play-state: paused;
+}
+.section-hero .tools .tools-group {
+  display: flex;
+  gap: 25px;
+  padding-right: 20px;
+  will-change: transform;
+  animation: scrolling 10s linear infinite;
+}
+.section-hero .tools .tools-group .tools-image {
+  width: 100%;
+}
+.section-hero .tools .tools-group .tools-image img {
   transition: transform 0.3s ease;
 }
-.section-hero .tools .container-tools img:hover {
-  transform: scale(1.01);
+.section-hero .tools .tools-group .tools-image img:hover {
+  transform: scale(1.2);
 }
-.section-hero .tools .container-tools img:not(:nth-child(5)) {
-  margin-right: 150px;
+@keyframes scrolling {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
-.section-hero .tools .container-tools .tools-item__google {
-  width: 88.71px;
-  height: 29.11px;
-}
-.section-hero .tools .container-tools .tools-item__trello {
-  width: 141.94px;
-  height: 29.11px;
-}
-.section-hero .tools .container-tools .tools-item__monday {
-  width: 156.88px;
-  height: 29.11px;
-}
-.section-hero .tools .container-tools .tools-item__notion {
-  width: 80.11px;
-  height: 29.11px;
-}
-.section-hero .tools .container-tools .tools-item__slack {
-  width: 114.29px;
-  height: 29.11px;
-}
-.section-hero .tools .divider-tools {
+.section-hero .divider-tools {
   background-color: #d7f5dc;
   height: 34px;
   width: 100%;
