--- a/css/sass/modules/_testimonial.scss
+++ b/css/sass/modules/_testimonial.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 .section-testimonial {
   background: $white-color;
   padding: 122px 0 300px 0;
@@ -56,11 +57,41 @@
     right: 0;
     left: 124px;
     top: 400px;
+    overflow-x: scroll;
     overflow-y: hidden;
     display: flex;
     max-width: 1316px;
     padding: 0 0 10px 5px;
     margin: 0 auto;
+
+    /* Para navegadores WebKit (Chrome, Safari) */
+    &::-webkit-scrollbar {
+      height: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: color.scale($black-color, $lightness: 90%);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: color.scale($black-color, $lightness: 50%);
+      border-radius: 10px;
+      border: 2px solid $white-color;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: color.scale($black-color, $lightness: 30%);
+    }
+
+    /* Para Firefox */
+    @-moz-document url-prefix() {
+      .section-testimonial .container .testimonial {
+        scrollbar-width: thin;
+        scrollbar-color: color.scale($black-color, $lightness: 50%)
+          color.scale($black-color, $lightness: 90%);
+      }
+    }
+
     .testimonial-card {
       padding: 40px;
       margin-bottom: 10px;
