--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -3,6 +3,7 @@
 @import "./modules/functions.scss";
 @import "./modules/general.scss";
 @import "./modules/hero.scss";
+@import "./modules/authenticate.scss";
 @import "./modules/services.scss";
 @import "./modules/number.scss";
 @import "./modules/portfolio.scss";
